<resources>
    <string name="app_name">Group Project</string>
    <string name="test_string">Test String</string>

    <!--Static-->
    <string name="contactInfo_lbl">Contact Info</string>
    <string name="contactAddr_lbl">Address</string>
    <string name="contactPhone_lbl">Phone</string>
    <string name="contactEmail_lbl">Email</string>
    <string name="contactWebsite_lbl">Website</string>

    <string name="contactWWWBtn_lbl">Visit Website</string>
    <string name="contactCallBtn_lbl">Call Us</string>
    <string name="contactMapBtn_lbl">Map</string>
    <string name="contactEmailBtn_lbl">Email Us</string>



    <!--Specific-->
    <string name="contactName">University of Phoenix</string>
    <string name="contactAddr1">1625 W Fountainhead Pkwy Tempe, AZ 85282</string>
    <string name="contactPhone">(602) 557&#8211;2000</string>
    <string name="contactEmail">contact@phoenix.edu</string>
    <string name="contactWebsite">http://www.phoenix.edu</string>






    <string name="action_settings">Settings</string>
</resources>
