<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contactName"
        android:id="@+id/contactName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/contactInfo_lbl"
        android:id="@+id/contactInfo_lbl"
        android:layout_below="@+id/contactName"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addressIcon"
        android:layout_marginTop="44dp"
        android:src="@drawable/navigateicon48"
        android:contentDescription="@string/contactAddr_lbl"
        android:layout_below="@+id/contactInfo_lbl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/contactAddr1"
        android:id="@+id/contactAddr"
        android:layout_alignTop="@+id/addressIcon"
        android:layout_alignLeft="@+id/contactName"
        android:layout_alignStart="@+id/contactName" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phoneIcon"
        android:src="@drawable/phoneicon48"
        android:layout_below="@+id/addressIcon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/contactPhone_lbl" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/contactPhone"
        android:id="@+id/contactPhone"
        android:layout_alignTop="@+id/phoneIcon"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/contactAddr"
        android:layout_alignStart="@+id/contactAddr" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailIcon"
        android:layout_below="@+id/phoneIcon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/emailicon48"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/contactEmail_lbl" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/contactEmail"
        android:id="@+id/contactEmail"
        android:layout_alignTop="@+id/emailIcon"
        android:layout_alignLeft="@+id/contactPhone"
        android:layout_alignStart="@+id/contactPhone"
        android:layout_marginTop="10dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/websiteIcon"
        android:layout_below="@+id/emailIcon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/websiteicon48"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/contactWebsite_lbl" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/contactWebsite"
        android:id="@+id/contactWebsite"
        android:layout_alignTop="@+id/websiteIcon"
        android:layout_alignLeft="@+id/contactEmail"
        android:layout_alignStart="@+id/contactEmail"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/navigateBtn"
            android:src="@drawable/navigateicon80"
            android:contentDescription="@string/contactMapBtn_lbl"
            android:layout_margin="5dp" />

        <ImageButton
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/callBtn"
            android:src="@drawable/phoneicon80"
            android:contentDescription="@string/contactCallBtn_lbl"
            android:layout_margin="5dp" />

        <ImageButton
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailBtn"
            android:src="@drawable/emailicon80"
            android:contentDescription="@string/contactEmailBtn_lbl"
            android:layout_margin="5dp" />

        <ImageButton
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/websiteBtn"
            android:src="@drawable/websiteicon80"
            android:contentDescription="@string/contactWWWBtn_lbl"
            android:layout_margin="5dp" />
    </LinearLayout>

</RelativeLayout>
